--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;uid=root;pwd=a12000457;database=dotnetdb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
